--- a/Draw/Controller/Share/ShareController.xib
+++ b/Draw/Controller/Share/ShareController.xib
@@ -230,8 +230,15 @@
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">all@2x.png</string>
 						</object>
-						<reference key="IBUIFontDescription" ref="164781613"/>
-						<reference key="IBUIFont" ref="293384245"/>
+						<object class="IBUIFontDescription" key="IBUIFontDescription">
+							<int key="type">1</int>
+							<double key="pointSize">12</double>
+						</object>
+						<object class="NSFont" key="IBUIFont">
+							<string key="NSName">Helvetica</string>
+							<double key="NSSize">12</double>
+							<int key="NSfFlags">16</int>
+						</object>
 					</object>
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
