--- a/Draw/Controller/Share/ShareEditController.xib
+++ b/Draw/Controller/Share/ShareEditController.xib
@@ -44,6 +44,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 460}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="353693316"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -57,6 +58,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 113}, {320, 286}}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="976250215"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -70,6 +72,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 50}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="239950230"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -83,6 +86,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{7, 399}, {307, 61}}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="730877834"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -92,6 +96,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{6, 5}, {37, 37}}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="637044409"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -128,7 +133,8 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{238, 7}, {75, 31}}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
-						<reference key="NSNextKeyView" ref="332979742"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="42812519"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -148,6 +154,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{7, 399}, {306, 61}}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
+						<reference key="NSWindow"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC45NDkwMTk2MDc4IDAuOTcyNTQ5MDE5NiAwLjk3NjQ3MDU4ODIgMAA</bytes>
@@ -173,8 +180,9 @@
 					<object class="IBUIImageView" id="976250215">
 						<reference key="NSNextResponder" ref="1033168711"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{16, 119}, {289, 259}}</string>
+						<string key="NSFrame">{{16, 130}, {289, 259}}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="13981569"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -184,6 +192,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{51, 12}, {168, 21}}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="7302159"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -214,11 +223,12 @@
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUIImageView" id="807594660">
+					<object class="IBUIImageView" id="1016570639">
 						<reference key="NSNextResponder" ref="1033168711"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 93}, {320, 40}}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="304575801"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -228,12 +238,13 @@
 							<string key="NSResourceName">normalpallets@2x.png</string>
 						</object>
 					</object>
-					<object class="IBUIScrollView" id="332979742">
+					<object class="IBUIScrollView" id="42812519">
 						<reference key="NSNextResponder" ref="1033168711"/>
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{0, 46}, {320, 48}}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
-						<reference key="NSNextKeyView" ref="807594660"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="1016570639"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -242,6 +253,7 @@
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="710874393"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -306,7 +318,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">patternsGallery</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="332979742"/>
+						<reference key="destination" ref="42812519"/>
 					</object>
 					<int key="connectionID">38</int>
 				</object>
@@ -367,8 +379,8 @@
 							<reference ref="637044409"/>
 							<reference ref="304575801"/>
 							<reference ref="976250215"/>
-							<reference ref="807594660"/>
-							<reference ref="332979742"/>
+							<reference ref="1016570639"/>
+							<reference ref="42812519"/>
 							<reference ref="13981569"/>
 							<reference ref="730877834"/>
 						</array>
@@ -421,12 +433,12 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">36</int>
-						<reference key="object" ref="807594660"/>
+						<reference key="object" ref="1016570639"/>
 						<reference key="parent" ref="1033168711"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">37</int>
-						<reference key="object" ref="332979742"/>
+						<reference key="object" ref="42812519"/>
 						<reference key="parent" ref="1033168711"/>
 					</object>
 				</array>
@@ -456,7 +468,73 @@
 			<nil key="sourceID"/>
 			<int key="maxID">40</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">PPViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/PPViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">ShareEditController</string>
+					<string key="superclassName">PPViewController</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="infuseImageView">SynthesisView</string>
+						<string key="inputBackground">UIImageView</string>
+						<string key="myImageView">UIImageView</string>
+						<string key="patternsGallery">UIScrollView</string>
+						<string key="shareButton">UIButton</string>
+						<string key="shareTextField">UITextView</string>
+						<string key="shareTitleLabel">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="infuseImageView">
+							<string key="name">infuseImageView</string>
+							<string key="candidateClassName">SynthesisView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="inputBackground">
+							<string key="name">inputBackground</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="myImageView">
+							<string key="name">myImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="patternsGallery">
+							<string key="name">patternsGallery</string>
+							<string key="candidateClassName">UIScrollView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="shareButton">
+							<string key="name">shareButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="shareTextField">
+							<string key="name">shareTextField</string>
+							<string key="candidateClassName">UITextView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="shareTitleLabel">
+							<string key="name">shareTitleLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ShareEditController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">SynthesisView</string>
+					<string key="superclassName">UIView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/SynthesisView.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
